tests/typing/bad/testfile-if-2.c

struct S { int a; };
int main() { struct S s; if(s); }
